[workspace]
members = [
    "bob",
    "bob-apps",
    "bob-backend",
    "bob-common",
    "bob-access",
]

[workspace.package]
version = "2.1.0-alpha.10"
edition = "2021"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
bitflags = "2.3"
futures = "0.3"
log = "0.4"
metrics = { version = "0.17", features = ["std"] }
bytes = "1.4"
chrono = "0.4"
coarsetime = "0.1"
regex = "1.8"
http = "0.2"
rand = "0.8"
sha2 = "0.10.6"
base64 = "0.21"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
tonic = { version = "0.6", features = ["prost"] }
smallvec = { version = "1.10", features = ["union"] }
tokio = { version = "1.28", features = [] }

[workspace.dependencies.pearl]
version = "0.19.0"


[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
panic = "abort"
lto = true

[profile.dev]
panic = "abort"

[profile.test]
panic = "unwind"

[profile.integration-test]
inherits = "test"
opt-level = 1
debug = 0
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.jemallocator-profile]
inherits = "dev"
panic = "unwind"
