[package]
name = "bob-access"
version = "2.1.0-alpha.12"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[dependencies]
axum = "0.4"
base64 = "0.13.0"
bitflags = "1.3"
hex = "0.4.3"
http = "0.2"
sha2 = "0.10.6"
tower = "0.4"
tonic = "0.6"
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
jsonwebtoken = "7.2"
serde_yaml = "0.8"
serde_json = "1.0"
futures = "0.3"
unicase = "2.6"

[dependencies.tokio]
version = "1.21"
default-features = false
features = []
