[package]
name = "bob-access"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
unicase = { workspace = true }
tokio = { workspace = true }
