[package]
name = "bob-apps"
version = "2.1.0-alpha.6"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.4"
bincode = "1.3"
bitflags = "1.3"
bob = { path = "../bob" }
bob-access = { path = "../bob-access" }
bytes = "1.2"
cfg-if = "1.0"
chrono = "0.4"
clap = "2.34"
crc = "1.8"
env_logger = "0.9"
futures = { version = "0.3", features = ["thread-pool"] }
http = "0.2"
humantime = "2.1"
hyper = { version = "0.14", default-features = false }
lazy_static = "1.4"
log = "0.4"
log4rs = "1.1"
metrics = { version = "0.17", features = ["std"] }
mockall = "0.11"
prost = "0.11"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
stopwatch = "0.0.7"
termion = "1.5"
thiserror = "1.0"
tonic = { version = "0.6", features = ["prost", "tls"] }
tower = "0.4"
rand = "0.8"
tower-service = "0.3"
log4rs-logstash = { version = "0.1.0", features = ["rustls"] }
reqwest = { version = "0.11", default-features = false }

[dependencies.tokio]
version = "1.21"
default-features = false
features = ["signal"]

[dependencies.pearl]
# version = "0.14.0"
git = "https://github.com/qoollo/pearl"

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "bobd"
path = "bin/bobd.rs"

[[bin]]
name = "bobc"
path = "bin/bobc.rs"

[[bin]]
name = "bobp"
path = "bin/bobp.rs"

[[bin]]
name = "ccg"
path = "bin/ccg.rs"

[[bin]]
name = "brt"
path = "bin/brt.rs"

[[bin]]
name = "bobt"
path = "bin/bobt.rs"
