[package]
name = "bob-apps"
version = "2.1.0-alpha.10"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
mimalloc-secure = ["dep:mimalloc", "mimalloc/secure"]
# Important: can't be used with panic = "abort"
# Please use profile "jemalloc-profile"
jemallocator = ["dep:jemallocator"]
jemallocator-profile = ["dep:jemallocator", "jemallocator/profiling"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.4"
base64 = "0.13.0"
bincode = "1.3"
bitflags = "1.3"
bob = { path = "../bob" }
bob-access = { path = "../bob-access" }
bob-common = { path = "../bob-common" }
bytes = "1.2"
cfg-if = "1.0"
chrono = "0.4"
clap = "2.34"
crc = "3.0"
env_logger = "0.9"
futures = { version = "0.3", features = ["thread-pool"] }
http = "0.2"
humantime = "2.1"
hyper = { version = "0.14", default-features = false }
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2"
metrics = { version = "0.17", features = ["std"] }
mockall = "0.11"
prost = "0.11"
regex = "1.6.0"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
thiserror = "1.0"
tonic = { version = "0.6", features = ["prost", "tls"] }
tower = "0.4"
rand = "0.8"
tower-service = "0.3"
hex = "0.4.3"
qoollo-log4rs-logstash = { version = "0.2", features = ["rustls"] }
reqwest = { version = "0.11", default-features = false }

[dependencies.tokio]
version = "1.21"
default-features = false
features = ["signal"]

[dependencies.pearl]
version = "0.19.0"

[target.'cfg(all(target_env = "musl", target_arch = "x86_64", target_pointer_width = "64"))'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "bobd"
path = "bin/bobd.rs"

[[bin]]
name = "bobc"
path = "bin/bobc.rs"

[[bin]]
name = "bobp"
path = "bin/bobp.rs"

[[bin]]
name = "ccg"
path = "bin/ccg.rs"

[[bin]]
name = "brt"
path = "bin/brt.rs"

[[bin]]
name = "bobt"
path = "bin/bobt.rs"
