[package]
name = "bob-apps"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
mimalloc-secure = ["dep:mimalloc", "mimalloc/secure"]
# Important: can't be used with panic = "abort"
# Please use profile "jemallocator-profile"
jemallocator = ["dep:jemallocator"]
jemallocator-profile = ["dep:jemallocator", "jemallocator/profiling"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
qoollo-log4rs-logstash = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true, default-features = false }
base64 = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
pearl = { workspace = true }
bob = { path = "../bob" }
bob-access = { path = "../bob-access" }
bob-common = { path = "../bob-common" }


[target.'cfg(all(target_env = "musl", target_arch = "x86_64", target_pointer_width = "64"))'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }


[[bin]]
name = "bobd"
path = "bin/bobd.rs"

[[bin]]
name = "bobc"
path = "bin/bobc.rs"

[[bin]]
name = "bobp"
path = "bin/bobp.rs"

[[bin]]
name = "ccg"
path = "bin/ccg.rs"

[[bin]]
name = "brt"
path = "bin/brt.rs"

[[bin]]
name = "bobt"
path = "bin/bobt.rs"
