[package]
name = "bob-backend"
version = "2.1.0-alpha.10"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-lock = "2.7"
async-trait = "0.1"
bob-common = { path = "../bob-common" }
bytes = "1.4"
chrono = "0.4"
coarsetime = "0.1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
metrics = { version = "0.17", features = ["std"] }
ring = "0.16"
smallvec = { version = "1.10", features = ["union"] }

[dependencies.pearl]
version = "0.19.0"

[dependencies.tokio]
version = "1.28"
default-features = false
features = []

[dev-dependencies]
criterion = "0.4"

[features]
async-io = ["pearl/async-io-rio"]

[[bench]]
name = "key_cmp_benchmark"
harness = false
