[package]
name = "bob-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
coarsetime = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
pearl = { workspace = true }
bob-common = { path = "../bob-common" }
async-lock = "2.7"
ring = "0.16" # TODO: replace with sha2


[dev-dependencies]
criterion = "0.4"

[features]
async-io = ["pearl/async-io-rio"]

[[bench]]
name = "key_cmp_benchmark"
harness = false
