[package]
name = "bob-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
async-io = ["pearl/async-io-rio"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
coarsetime = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
smallvec = { workspace = true }
async-lock = { workspace = true }
tokio = { workspace = true }
pearl = { workspace = true }
bob-common = { path = "../bob-common" }


[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "key_cmp_benchmark"
harness = false
