[package]
name = "bob-common"
version = "2.1.0-alpha.10"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bob-access = { path = "../bob-access" }
bob-grpc = { path = "../bob-grpc" }
bytes = "1.4"
cfg-if = "1.0"
chrono = "0.4"
coarsetime = "0.1"
futures = "0.3"
http = "0.2"
humantime = "2.1"
log = "0.4"
metrics = { version = "0.17", features = ["std"] }
metrics-exporter-prometheus = { version = "0.6", features = ["tokio-exporter"]}
metrics-util = "0.10"
mockall = "0.11"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tonic = { version = "0.6", features = ["prost", "tls"] }
ubyte = { version = "0.10", features = ["serde"] }

[dependencies.tokio]
version = "1.28"
default-features = false
features = ["fs"]

[features]
default = []
testing = []
production = []
