[package]
name = "bob-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
coarsetime = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tokio = { workspace = true }
bob-access = { path = "../bob-access" }
bob-grpc = { path = "../bob-grpc" }
cfg-if = "1.0"
humantime = "2.1"
metrics-exporter-prometheus = { version = "0.6", features = ["tokio-exporter"] }
metrics-util = "0.10"
mockall = "0.11"
ubyte = { version = "0.10", features = ["serde"] }


[features]
default = []
testing = []
production = []
