[package]
name = "bob-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
testing = []
production = []

[dependencies]
bob-access = { path = "../bob-access" }
bob-grpc = { path = "../bob-grpc" }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
coarsetime = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
cfg-if = { workspace = true }
humantime = { workspace = true }
mockall = { workspace = true }
ubyte = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tokio = { workspace = true }
