[package]
name = "bob-grpc"
version = "2.1.0-alpha.10"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[dependencies]
bytes = "1.4"
log = "0.4"
prost = "0.9"
tonic = { version = "0.6", features = ["prost"] }

[dependencies.tokio]
version = "1.28"
default-features = false
features = []

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"