[package]
name = "bob-grpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
prost = "0.9"


[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"