[package]
name = "bob"
version = "2.1.0-alpha.6"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.4"
axum-server = { version = "0.3.3", features = ["tls-rustls"] }
bitflags = "1.3"
bob-access = { path = "../bob-access" }
bob-backend = { path = "../bob-backend" }
bob-common = { path = "../bob-common", features = [] }
bob-grpc = { path = "../bob-grpc" }
bytes = "1.1"
cfg-if = "1.0"
chrono = "0.4"
futures = { version = "0.3", features = ["thread-pool"] }
http = "0.2"
humantime = "2.1.0"
hyper = { version = "0.14", default-features = false }
infer = "0.5"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
metrics = { version = "0.17", features = ["std"] }
mockall = "0.10.2"
prost = "0.9"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
stopwatch = "0.0.7"
termion = "1.5"
thiserror = "1.0"
sysinfo = "0.21.2"
tonic = { version = "0.6", features = ["prost"] }
tower = "0.4"
tower-service = "0.3"
uuid = "0.8.2"

[dependencies.pearl]
version = "0.14.0"

[dependencies.tokio]
version = "1.14"
default-features = false
features = []

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
env_logger = "0.9"
