[package]
name = "bob"
version = "2.1.0-alpha.10"
authors = [
    "Kirill Bushminkin <kb@qoollo.com>",
    "Pavel Iakushin <pyakushin@qoollo.com>",
    "Nikita Menshov",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.4"
axum-server = { version = "0.3.3", features = ["tls-rustls"] }
bob-access = { path = "../bob-access" }
bob-backend = { path = "../bob-backend" }
bob-common = { path = "../bob-common" }
bob-grpc = { path = "../bob-grpc" }
bytes = "1.4"
chrono = "0.4"
futures = "0.3"
http = "0.2"
infer = "0.14"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
metrics = { version = "0.17", features = ["std"] }
serde = "1.0"
serde_derive = "1.0"
sysinfo = "0.27"
tonic = { version = "0.6", features = ["prost"] }
uuid = "1.3"
smallvec = { version = "1.10", features = ["union"] }

[dependencies.pearl]
version = "0.19.0"

[dependencies.tokio]
version = "1.28"
default-features = false
features = []

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
env_logger = "0.9"
