[package]
name = "bob"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tonic = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
infer = { workspace = true }
tokio = { workspace = true }
pearl = { workspace = true }
bob-access = { path = "../bob-access" }
bob-backend = { path = "../bob-backend" }
bob-common = { path = "../bob-common" }
bob-grpc = { path = "../bob-grpc" }


[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
